fix: remove z-index

--- a/site/templates/template/element/Nav2/index.less
+++ b/site/templates/template/element/Nav2/index.less
@@ -122,11 +122,6 @@
   }
 }
 
-.ant-drawer-left.ant-drawer-open,
-.ant-drawer-right.ant-drawer-open {
-  z-index: 9999;
-}
-
 .ant-pro-form-login-top {
   text-align: center;
 }
